--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -41,11 +41,12 @@
                 <td mat-cell *matCellDef="let element"> {{element.description}}</td>
             </ng-container>
 
-            <!-- actions column -->
+            <!-- actions -->
              <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> Acciones</th>
                 <td mat-cell *matCellDef="let element; let i=index;">
-                    <button mat-icon-button color="accent">
+                    
+                    <button mat-icon-button color="accent" (click)="edit(element.id, element.name, element.description)">
                         <mat-icon arial-label="Edit">edit</mat-icon>
                     </button>
 
