--- a/src/app/modules/category/components/new-category/new-category.component.html
+++ b/src/app/modules/category/components/new-category/new-category.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title> Agregar nueva Categoría</h2>
+<h2 mat-dialog-title> {{formState}} nueva Categoría</h2>
 <mat-dialog-content>
     <form [formGroup]="categoryForm">
         <div class="category-conatiner">
