Add find category by id

--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -4,7 +4,7 @@
         <div>
             <mat-form-field hintLabel="Busque categorías" appearance="fill">
                 <mat-label>Buscar Categorías</mat-label>
-                <input matInput #input>
+                <input matInput #input (keyup)="findCategory(input.value)">
             </mat-form-field>
         </div>
     </mat-card-header>
