--- a/src/app/modules/shared/components/sidenav/sidenav.component.html
+++ b/src/app/modules/shared/components/sidenav/sidenav.component.html
@@ -19,7 +19,7 @@
                         <mat-icon>person_outline</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)="logout()">
                             <mat-icon>exit_to_app</mat-icon>
                             Cerrar sesión
                         </button>
@@ -41,8 +41,7 @@
                 <!--profile-->
                 <div class="profile-card">
                     <div class="header">
-                        <h2>Mario Herrera</h2>
-                        <h4>marioherrera@gmail.com</h4>
+                        <h2> {{userName}} </h2>
                     </div>
                 </div>
 
