--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -50,7 +50,7 @@
                         <mat-icon arial-label="Edit">edit</mat-icon>
                     </button>
 
-                    <button mat-icon-button color="accent" (click)="deleteCategory(element.id)">
+                    <button *ngIf="isAdmin" mat-icon-button color="accent" (click)="deleteCategory(element.id)">
                         <mat-icon arial-label="Delete">delete</mat-icon>
                     </button>
                 </td>
